Add Andela Logo

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>Andela Room Bookings</title>
+	<link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
 	<!-- Main Container -->
@@ -10,7 +11,7 @@
 
 		<!-- Andela Logo -->
 		<div class="logo">
-			<img src="img/andela.jpg" alt="Andela Logo">
+			<img src="img/andela.png" alt="Andela Logo" width="350">
 		</div>
 		<!-- /.Andela Logo -->
 
@@ -18,7 +19,7 @@
 		<div class="search-room bg-gray">
 			<!-- Rooms -->
 			<div id="rooms" class="rooms">
-				<label for="find-rooms">Select Meeting Room</label>
+				<label for="find-rooms">Select Room</label>
 				<select name="find-rooms" id="">
 					<option value="1"> Meeting</option>
 					<option value="2"> Games</option>
