Create Front End HTML Design

--- a/index.html
+++ b/index.html
@@ -35,8 +35,51 @@
 	
 
 		<!-- Result -->
-		<div id="result" class="bg-gray">
-			
+		<div id="result">
+			<div class="rooms-result">
+				<h3>Results</h3>
+				<p>No of Rooms Found : <span class="rooms-found"> 1 </span></p>
+			</div>
+			<div>
+				
+				<table class="search-result">
+					<tr>
+						<th width="10%">Room No</th>
+						<th width="20%">Room Name</th>
+						<th width="15%">Capacity</th>
+						<th width="45%">Features</th>
+						<th width="10%">Available</th>
+					</tr>
+					<tr>
+						<td>1</td>
+						<td>Haruna</td>
+						<td>20</td>
+						<td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat voluptatibus cumque necessitatibus aperiam quas laudantium?</td>
+						<td class="center"><span class="available">YES</span></td>
+					</tr>
+					<tr>
+						<td>2</td>
+						<td>Itunu</td>
+						<td>10</td>
+						<td>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</td>
+						<td><span class="not-available">NO</span></td>
+					</tr>
+					<tr>
+						<td>3</td>
+						<td>Oladimeji</td>
+						<td>200</td>
+						<td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat voluptatibus cumque necessitatibus aperiam quas laudantium?</td>
+						<td><span class="available">YES</span></td>
+					</tr>
+					<tr>
+						<td>4</td>
+						<td>Neto Meeting Room</td>
+						<td>20</td>
+						<td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla distinctio, corrupti quibusdam quaerat libero omnis error quae ea vel sequi consequuntur nam, at, aspernatur ducimus et. A voluptates voluptatum animi dignissimos ex ratione expedita voluptas eos saepe quisquam, similique, iusto sit, vitae quos. Atque, porro maxime numquam harum, nam veniam sunt? Molestias veniam molestiae doloribus neque sequi, adipisci commodi totam.</td>
+						<td><span class="available">YES</span></td>
+					</tr>
+				</table>
+			</div>
 		</div>
 		<!-- /.Result -->
 
